templates/scor-vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "SCOR R and D VPC - Prod + Stage",
  "Mappings": {
    "Networking": {
      "VPC": {
        "CIDR": "172.20.0.0/16"
      },
      "PublicSubnetOne": {
        "CIDR": "172.20.10.0/27"
      },
      "PublicSubnetTwo": {
        "CIDR": "172.20.20.0/27"
      },
      "WorkspacesSubnet1d": {
        "CIDR": "172.20.50.0/24"
      }, 
      "WorkspacesSubnet1e": {
        "CIDR": "172.20.60.0/24"
      }, 
      "InfrastructureSubnet1d": {
        "CIDR": "172.20.70.0/24"
      } 
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "CidrBlock": {
          "Fn::FindInMap": [ "Networking","VPC","CIDR" ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SCOR_R_and_D"
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "GatewayToInternet": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "NATGatewayOne": {
      "DependsOn": "GatewayToInternet",
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [ "ElasticIPOne","AllocationId" ]
        },
        "SubnetId": {
          "Ref": "PublicSubnetOne"
        }
      }
    },
    "ElasticIPOne": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NATGatewayTwo": {
      "DependsOn": "GatewayToInternet",
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [ "ElasticIPTwo","AllocationId" ]
        },
        "SubnetId": {
          "Ref": "PublicSubnetTwo"
        }
      }
    },
    "ElasticIPTwo": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "PublicSubnetOne": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "MapPublicIpOnLaunch": true,
        "CidrBlock": {
          "Fn::FindInMap": [ "Networking", "PublicSubnetOne","CIDR" ]
        },
      
      	"AvailabilityZone": {
          "Fn::Select": [ "3",
              {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Public 1d"
          }
        ]
      }
    },
    "PublicSubnetOneRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnetOne"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      }
    },
    "PublicSubnetTwo": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "MapPublicIpOnLaunch": true,
        "CidrBlock": {
          "Fn::FindInMap": [ "Networking", "PublicSubnetTwo","CIDR" ]
	},           
          
        "AvailabilityZone": {
          "Fn::Select": [ "4",
              {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Public 1e"
          }
        ]
      }
    },
    "PrivateRouteTableOne": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "PrivateRouteToInternetOne": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTableOne"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NATGatewayOne"
        }
      }
    },
    "WorkspacesSubnet1dRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "WorkspacesSubnet1d"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTableOne"
        }
      }
    },
    "InfrastructureSubnet1dRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "InfrastructureSubnet1d"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTableOne"
        }
      }
    },
    "PrivateRouteTableTwo": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "PrivateRouteToInternetTwo": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTableTwo"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NATGatewayTwo"
        }
      }
    },
    "WorkspacesSubnet1eRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "WorkspacesSubnet1e"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTableTwo"
        }
      }
    },
    "WorkspacesSubnet1d": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::FindInMap": [ "Networking", "WorkspacesSubnet1d", "CIDR" ]
        },

	"AvailabilityZone": {
          "Fn::Select": [ "3", 
		  { 
          "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
	     }
	   ]
         },

        "Tags": [
          {
            "Key": "Name",
            "Value": "Workspaces 1d"
          }
        ]
      } 
    }, 
    "WorkspacesSubnet1e": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::FindInMap": [ "Networking", "WorkspacesSubnet1e", "CIDR" ]
        },

	"AvailabilityZone": {
          "Fn::Select": [ "4", 
		  { 
          "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
	     }
	   ]
         },

        "Tags": [
          {
            "Key": "Name",
            "Value": "Workspaces 1e"
          }
        ]
      } 
    }, 
    "InfrastructureSubnet1d": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::FindInMap": [ "Networking", "InfrastructureSubnet1d", "CIDR" ]
        },

	"AvailabilityZone": {
          "Fn::Select": [ "3", 
		  { 
          "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
	     }
	   ]
         },

        "Tags": [
          {
            "Key": "Name",
            "Value": "Infrastructure 1d"
          }
        ]
      } 
    } 
  }
}
